자바로 바꾸기 1회차

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
 
     <div>
-      <form action="result.jsp" name="conversion-form" method="post">
+      <form action="/form" name="conversion-form" method="post">
         <!--<select></select>-->
         <input type="number" max="4.50" name="grade" placeholder="학점을 입력하세요." step="0.01">
         <input type="number" max="10.00" name="dist-score" placeholder="거리 점수를 입력하세요." step="0.05">
@@ -62,7 +62,7 @@
     </div>
 
     <!-- 버튼을 form 안에 넣어야 한대서 이거 주석처리함
-      <div>ㄴ
+      <div>
       <button>추천 받기!</button>
     </div>-->
     
