--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
     </div>
 
     <div>
-      <form action="/form" name="conversion-form" method="post">
+      <form action="/articles/result" name="conversion-form" method="post">
         <!--<select></select>-->
         <input type="number" max="4.50" name="grade" placeholder="학점을 입력하세요." step="0.01">
-        <input type="number" max="10.00" name="dist-score" placeholder="거리 점수를 입력하세요." step="0.05">
+        <input type="number" max="10.00" name="distscore" placeholder="거리 점수를 입력하세요." step="0.05">
         <button type="submit">추천 받기!</button>
       </form>
     </div>
