출력까지 잘 됨 결과 잘 나옴ㅎㅎ

--- a/java/demo/src/main/resources/static/index.html
+++ b/java/demo/src/main/resources/static/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>전북대 기숙사이트</title>
-  <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="../../../../../css/index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@200&display=swap" rel="stylesheet">
-  <script src="./js/index.js" defer></script>
+  <script src="../../../../../js/index.js" defer></script>
   <script src="https://kit.fontawesome.com/4ec59cdc0a.js" crossorigin="anonymous"></script>
 
 </head>
@@ -25,7 +25,7 @@
       </div>
 
       <ul class="navbar_menu">
-        <li><a href="./html/dorm-info.html" target="_blank">기숙사 정보</a></li>
+        <li><a href="../../../../../html/dorm-info.html" target="_blank">기숙사 정보</a></li>
         <li><a href="#">기숙사 약도</a></li>
         <li><a href="#">기숙사 모의 지원</a></li>
         <li><a href="#">기숙사 평점</a></li>
@@ -53,7 +53,7 @@
     </div>
 
     <div>
-      <form action="/articles/result" name="conversion-form" method="post">
+      <form action="/result" name="conversion-form" method="post">
         <!--<select></select>-->
         <input type="number" max="4.50" name="grade" placeholder="학점을 입력하세요." step="0.01">
         <input type="number" max="10.00" name="distscore" placeholder="거리 점수를 입력하세요." step="0.05">
